[package]
name = "neo-flash"
version = "0.1.0"
edition = "2021"

[dependencies]
pinocchio = "0.10.2"
pinocchio-log = "0.5.1"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
solana-address = { version = "2.3.0", features = ["curve25519"] }

[dev-dependencies]
litesvm = "0.10.0"
solana-program = "4.0.0"
solana-sdk = "3.0.0"
solana-system-interface = "3.1.0"
spl-token = "9.0.0"

[lib]
crate-type = ["lib", "cdylib"]
